Ensure PDF download button doesn't get too big - an issue on one col layouts

--- a/css/about.css
+++ b/css/about.css
@@ -78,6 +78,7 @@ h2 {
 
 #pdf img {
     width: 70%;
+    max-width: 200px;
 }
 
 #home {
